.metadata/.plugins/org.eclipse.cdt.ui/lab.build.log
22:08:59 **** Incremental Build of configuration Debug for project lab ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'MX_GPIO_Init':
../Core/Src/main.c:251:40: error: 'LED_YELLOW_Pin' undeclared (first use in this function); did you mean 'LED_RED_Pin'?
  251 |   HAL_GPIO_WritePin(GPIOA, LED_RED_Pin|LED_YELLOW_Pin, GPIO_PIN_RESET);
      |                                        ^~~~~~~~~~~~~~
      |                                        LED_RED_Pin
../Core/Src/main.c:251:40: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

22:08:59 Build Failed. 2 errors, 0 warnings. (took 252ms)

